crates/es-fluent-derive/src/macros/snapshots/es_fluent_derive__macros__derive_fluent_choice__tests__expand_choice_emits_compile_error_for_invalid_serialize_all.snap
---
source: crates/es-fluent-derive/src/macros/derive_fluent_choice.rs
expression: tokens
---
:: core :: compile_error ! { "Matching variant not found. Supported values are: snake_case, PascalCase, camelCase, kebab-case, SCREAMING_SNAKE_CASE, SCREAMING-KEBAB-CASE, Title Case, Train-Case, lowercase, UPPERCASE" }
