crates/es-fluent-derive/src/macros/snapshots/es_fluent_derive__macros__derive_fluent_choice__tests__expand_choice_generates_expected_tokens_for_default_mode.snap
---
source: crates/es-fluent-derive/src/macros/derive_fluent_choice.rs
expression: default_tokens
---
impl ::es_fluent::EsFluentChoice for ChoiceDefault {
    fn as_fluent_choice(&self) -> ::es_fluent::registry::StaticFluentVariantKey {
        match self {
            Self::VeryHigh => {
                ::es_fluent::registry::__macro::static_variant_key("very-high")
            }
        }
    }
}
