crates/es-fluent-derive/src/macros/snapshots/es_fluent_derive__macros__derive_fluent_choice__tests__expand_choice_generates_expected_tokens_for_snake_case_mode.snap
---
source: crates/es-fluent-derive/src/macros/derive_fluent_choice.rs
expression: snake_tokens
---
impl ::es_fluent::EsFluentChoice for ChoiceSnake {
    fn as_fluent_choice(&self) -> &'static str {
        match self {
            Self::VeryHigh => "very_high",
        }
    }
}
