crates/es-fluent-derive/src/macros/snapshots/es_fluent_derive__macros__derive_fluent_choice__tests__expand_choice_returns_darling_errors_for_unsupported_input_shapes.snap
---
source: crates/es-fluent-derive/src/macros/derive_fluent_choice.rs
expression: tokens
---
:: core :: compile_error ! { "Unsupported shape `struct`. Expected enum with no fields." }
